workshop04/w4-ing.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: w4
spec:
  type: ClusterIP
  selector:
    app: minio-node
    name: minio-node
  ports:
    - port: 9000
      targetPort: 9000
      name: data-port
    - port: 9001
      targetPort: 9001
      name: console-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  namespace: w4
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: console-146.190.4.229.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-svc
                port:
                  name: console-port
    - host: data-146.190.4.229.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-svc
                port:
                  name: data-port
